refactor: link 경로 수정 및 css 수정

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <!-- <link rel="stylesheet" href="./login.css" /> -->
     <script src="./include.js" defer></script>
   </head>
-  <body
-    style="
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    "
-  >
-    <header
-      data-include="../src/header/header.html"
-      style="width: 70%; justify-content: center"
-    ></header>
-    <main data-include="../src/main/main.html"></main>
+  <body>
+    <div
+      style="
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      <header data-include="../src/header/header.html"></header>
+      <main data-include="../src/main/main.html"></main>
+    </div>
+
     <!-- <footer data-include="./src/footer/footer.html"></footer> -->
   </body>
 </html>
