--- a/src/main/main.html
+++ b/src/main/main.html
@@ -8,6 +8,10 @@
     <title>MainPage</title>
     <script src="./include.js" defer></script>
     <style>
+      @font-face {
+        font-family: "Shrikhand";
+        src: url("./font/Shrikhand.ttf");
+      }
       .logo {
         left: 0%;
         right: 74.01%;
