--- a/src/campusLifeTest/test2.html
+++ b/src/campusLifeTest/test2.html
@@ -9,11 +9,10 @@
 <body>
     <div class="background">
         <div class="header">
-            <div class="logo">My-U</div>
+            <div class="logo" onclick="location.href='../../index.html'">My-U</div>
             <div class="longLine"></div>
             <div class="midLine"></div>
             <div class="shortLine"></div>
-            <button class="logout" onclick="location.href='../login/login.html'">로그아웃</button>
         </div>
         <div class="body">
             <div class="body_header">
