style: 회원가입 버튼 css 수정

--- a/src/signUp/signUp.html
+++ b/src/signUp/signUp.html
@@ -83,9 +83,7 @@
           />
         </div>
       </div>
-      <button class="loginBtn" onclick="join()" style="decoration: none">
-        회원가입
-      </button>
+      <button class="loginBtn" onclick="join()">회원가입</button>
       <footer data-include="../smallFooter/smallFooter.html"></footer>
     </div>
   </body>
