--- a/src/login/login.html
+++ b/src/login/login.html
@@ -66,7 +66,10 @@
           </div>
         </div>
         <button class="loginBtn" onclick="login()">로그인</button>
-        <a href="/src/signUp/signUp.html">
+        <a
+          href="/src/signUp/signUp.html"
+          style="text-decoration: none; color: black"
+        >
           <p style="font-size: 20px">회원가입</p>
         </a>
       </div>
