feat : 테스트1,2 UI수정 완 (공유하기 제외)

--- a/src/clubResult/danceClub.html
+++ b/src/clubResult/danceClub.html
@@ -22,7 +22,7 @@
 			<div class="resultName">댄스 동아리</div>
 			<div class="body_body">
 				<div class="body_left">
-					<img src="danceClubImg.png" class="photo"></img>
+					<img src="danceImg.png" class="photo"></img>
 					<div class="body_footer">
 						<img src="share.png" class="shareImg"></img>
 						<p>공유하기</p>
