--- a/src/clubResult/exerciseClub.html
+++ b/src/clubResult/exerciseClub.html
@@ -39,13 +39,13 @@
 		</div>
 		<div class="body">
 			<div class="body_header2"> 당신과 찰떡궁합 동아리는...?<br></div>
-			<div class="resultName2" onclick="sharePage()">운동 동아리</div>
+			<div class="resultName">운동 동아리</div>
 			<div class="body_body">
 				<div class="body_left">
 					<img src="exerciseImg.png" class="photo"></img>
 					<div class="body_footer">
 						<img src="share.png" class="shareImg"></img>
-						<button onclick="sharePage()">공유하기</button>
+						<p onclick="sharePage()">공유하기</p>
 					</div>
 				</div>
 				<div class="body_right">
