--- a/src/clubResult/issueClub.html
+++ b/src/clubResult/issueClub.html
@@ -19,7 +19,7 @@
 		</div>
 		<div class="body">
 			<div class="body_header2"> 당신과 찰떡궁합 동아리는...?<br></div>
-			<div class="resultName">시사.이슈 동아리</div>
+			<div class="resultName">시사 동아리</div>
 			<div class="body_body">
 				<div class="body_left">
 					<img src="issueImg.png" class="photo"></img>
@@ -39,7 +39,7 @@
 					</div>
 
 					<div class="result_link"><br><br><br>
-
+						#Time : 중앙 학술 동아리 (시사 영어 동아리)
 					</div>
 				</div>
 			</div>
