--- a/src/result/oldStudent.html
+++ b/src/result/oldStudent.html
@@ -19,7 +19,7 @@
 		</div>
 		<div class="body">
 			<div class="body_header"> 대학교에서 당신은...<br></div>
-			<div class="resultName">무념무상 <br>헌내기</div>
+			<div class="resultName">무념무상 헌내기</div>
 			<div class="body_body">
 				<div class="body_left">
 					<img src="oldStudent.png" class="photo"></img>
