--- a/src/result/professor.html
+++ b/src/result/professor.html
@@ -19,7 +19,7 @@
 		</div>
 		<div class="body">
 			<div class="body_header"> 대학교에서 당신은...<br></div>
-			<div class="resultName"> 혹시 ... <br>교수님 ?!?!</div>
+			<div class="resultName"> 혹시 ... 교수님 ?!?!</div>
 			<div class="body_body">
 				<div class="body_left">
 					<img src="professor.png" class="photo"></img>
@@ -28,8 +28,8 @@
 						<p>공유하기</p>
 					</div>
 				</div>
-				<div class="body_right">
-					<div class="result_name">#입학생과 교수님 사이 그 어딘가...<br></div>
+				<div class="body_right2">
+					<div class="result_name">#입학생과_ 교수님_ 사이 그 어딘가...<br></div>
 
 					<div class="result_explain">
 						당신은... 혹시 교수님이십니까?<br>
