--- a/src/clubResult/computerClub.html
+++ b/src/clubResult/computerClub.html
@@ -46,7 +46,7 @@
 		</div>
 		<div class="body">
 			<div class="body_header2"> 당신과 찰떡궁합 동아리는...?<br></div>
-			<div class="resultName">IT 동아리</div>
+			<div style='word-spacing:20px' class="resultName"> IT 동아리</div>
 			<div class="body_body">
 				<div class="body_left">
 					<img src="computerImg.png" class="photo"></img>
