style : 인스타 링크에 hover 추가

--- a/src/result/returnStudent.html
+++ b/src/result/returnStudent.html
@@ -38,10 +38,12 @@
 						누려 보는 건 어떨까요?
 						분명 도음이 될 거예요!
 					</div>
-					<div class="result_link">명지대학교 관련 소식은 <a
-							href="https://www.instagram.com/myongji_univ/">@Myongi_univ</a>에서 <br>
-						명지대학교 인문캠퍼스 관련 소식은 <a href="https://www.instagram.com/mju_move/">@Mju_move</a>에서<br>
-						명지대학교 자연캠퍼스 관련 소식은<a href="https://www.instagram.com/mju_dot/"> @Mju_dot</a>에서</div>
+					<div class="result_link">명지대학교 관련 소식은 <a href="https://www.instagram.com/myongji_univ/"
+							class="insta">@Myongi_univ</a>에서 <br>
+						명지대학교 인문캠퍼스 관련 소식은 <a href="https://www.instagram.com/mju_move/"
+							class="insta">@Mju_move</a>에서<br>
+						명지대학교 자연캠퍼스 관련 소식은<a href="https://www.instagram.com/mju_dot/" class="insta"> @Mju_dot</a>에서
+					</div>
 				</div>
 			</div>
 			<div class="footer">
