--- a/src/result/freshman.html
+++ b/src/result/freshman.html
@@ -37,10 +37,12 @@
 						하지만 지금이라도 늦지 않았어요! 당신이 우리 학교를 다니며 하고 싶은 것들, 가고 싶은 곳들, 모두 다 할 수 있습니다!
 						주변 선배에게 조언을 구해보고, 즐기고 싶었던 여러 행사에도 참여해 보세요! 당신의 젊음은 당신의 것이니까요!</div>
 
-					<div class="result_link">명지대학교 관련 소식은 <a
-							href="https://www.instagram.com/myongji_univ/">@Myongi_univ</a>에서 <br>
-						명지대학교 인문캠퍼스 관련 소식은 <a href="https://www.instagram.com/mju_move/">@Mju_move</a>에서<br>
-						명지대학교 자연캠퍼스 관련 소식은<a href="https://www.instagram.com/mju_dot/"> @Mju_dot</a>에서</div>
+					<div class="result_link">명지대학교 관련 소식은 <a href="https://www.instagram.com/myongji_univ/"
+							class="insta">@Myongi_univ</a>에서 <br>
+						명지대학교 인문캠퍼스 관련 소식은 <a href="https://www.instagram.com/mju_move/"
+							class="insta">@Mju_move</a>에서<br>
+						명지대학교 자연캠퍼스 관련 소식은<a href="https://www.instagram.com/mju_dot/" class="insta"> @Mju_dot</a>에서
+					</div>
 				</div>
 			</div>
 			<div class="footer">
