--- a/src/clubResult/exerciseClub.html
+++ b/src/clubResult/exerciseClub.html
@@ -6,26 +6,6 @@
 	<link href="clubResultPage.css" rel="stylesheet">
 	<link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-	<script>
-		sharePage = () => {
-			const shareObject = {
-				title: '결과 공유',
-				text: '',
-				url: window.location.href,
-			};
-			if (navigator.share) {
-				navigator.share(sahreObject)
-					.then(() => {
-						alert('공유 링크가 복사되었습니다')
-					})
-					.catch((error) => {
-						alert('에러가 발생했습니다')
-					})
-			} else {
-				alert('페이지 공유를 지원하지 않습니다')
-			}
-		}
-	</script>
 </head>
 
 <body>
@@ -45,7 +25,7 @@
 					<img src="exerciseImg.png" class="photo"></img>
 					<div class="body_footer">
 						<img src="share.png" class="shareImg"></img>
-						<p onclick="sharePage()">공유하기</p>
+						<p>공유하기</p>
 					</div>
 				</div>
 				<div class="body_right">
