--- a/src/clubResult/computerClub.html
+++ b/src/clubResult/computerClub.html
@@ -21,7 +21,7 @@
 			textarea.select();
 			document.execCommand("copy");
 			document.body.removeChild(textarea);
-			alert("URL이 복사되었습니다.")
+			alert("공유 링크가 복사되었습니다.")
 		}
 
 	</script>
