--- a/src/clubResult/computerClub.html
+++ b/src/clubResult/computerClub.html
@@ -6,20 +6,34 @@
 	<link href="clubResultPage.css" rel="stylesheet">
 	<link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-
-	<!-- <script src="/shareLink.js"></script> -->
-	<script>
+<script>
 		function copyLink() {
-			console.log("dddddd");
-			// 복사할 링크의 주소를 가져옵니다.
-			var link = "https://www.example.com"; // 여기에 공유할 링크를 입력하세요.
+			var textarea = document.createElement("textarea");
+			document.body.appendChild(textarea);
+			textarea.value = window.location.href;
 
+			textarea.select();
+			document.execCommand('copy');
+			document.body.removeChild(textarea);
+
+			alert("현재 페이지 주소가 복사되었습니다.");
+		}
+
+		document.addEventListener('DOMContentLoaded', function() {
+			var shareBtn = document.getElementById('shareBtn');
+			shareBtn.onclick = copyLink;
+		});
+</script>
+	<!-- <script src="./shareLink.js"></script> -->
+	<!-- <script>
+		function copyLink() {
 			// 임시 textarea 엘리먼트를 생성하고 링크를 설정합니다.
-			var textarea = document.createElement('textarea');
-			textarea.value = link;
+			var textarea = document.createElement("textarea");
+			document.body.appendChild(textarea);
+			textarea.value = window.document.location.href;
+			
 
 			// body에 textarea를 추가하고 선택합니다.
-			document.body.appendChild(textarea);
 			textarea.select();
 
 			// 링크를 클립보드에 복사합니다.
@@ -31,7 +45,7 @@
 			// 복사 완료 메시지를 표시합니다.
 			alert("링크가 복사되었습니다.");
 		}
-	</script>
+	</script> -->
 
 </head>
 
@@ -52,7 +66,15 @@
 					<img src="computerImg.png" class="photo"></img>
 					<div class="body_footer">
 						<img src="share.png" class="shareImg"></img>
-						<p onclick="copyLink() ">공유하기</p>
+						<div id="shareBtn">공유하기</div>
+						<!-- <div id="share" onclick="copyLink();">
+							<p>공유하기</p>
+						</div> -->
+						
+
+						<!-- <a href="#" id="share" class="share" title="새창" onclick="copyLink(); return false;">공유하기</a> -->
+
+						<!-- <input type="button" id="share" onclick="copyLink() ">공유하기</input> -->
 					</div>
 				</div>
 				<div class="body_right">
