--- a/src/clubResult/computerClub.html
+++ b/src/clubResult/computerClub.html
@@ -38,14 +38,15 @@
 			<div class="mypage">로그아웃</div>
 		</div>
 		<div class="body">
-			<div href="#" onclick="clip(); return false;" class="body_header2"> 당신과 찰떡궁합 동아리는...?<br></div>
+			<div class="body_header2"> 당신과 찰떡궁합 동아리는...?<br></div>
 			<div style='word-spacing:20px' class="resultName"> IT 동아리</div>
 			<div class="body_body">
 				<div class="body_left">
-					<img src="computerImg.png" class="photo"></img>
+					<img href="#" onclick="clip(); return false;" src="computerImg.png" class="photo"></img>
 					<div class="body_footer">
-						<img src="share.png" class="shareImg"></img>
+						<img class="toshare" src="share.png" class="shareImg"></img>
 						<p>공유하기</p>
+						<p>사진을 클릭하면 결과 링크를 공유할 수 있습니다</p>
 					</div>
 				</div>
 				<div class="body_right">
