--- a/src/result/professor.html
+++ b/src/result/professor.html
@@ -6,6 +6,22 @@
 	<link href="resultPage.css" rel="stylesheet">
 	<link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+	<script type="text/javascript">
+
+		function clip() {
+
+			var url = '';
+			var textarea = document.createElement("textarea");
+			document.body.appendChild(textarea);
+			url = window.document.location.href;
+			textarea.value = url;
+			textarea.select();
+			document.execCommand("copy");
+			document.body.removeChild(textarea);
+			alert("공유 링크가 복사되었습니다.")
+		}
+
+	</script>
 </head>
 
 <body>
@@ -22,10 +38,11 @@
 			<div class="resultName"> 혹시 ... 교수님 ?!?!</div>
 			<div class="body_body">
 				<div class="body_left">
-					<img src="professor.png" class="photo"></img>
+					<img href="#" onclick="clip(); return false;" src="professor.png" class="photo"></img>
 					<div class="body_footer">
-						<img src="share.png" class="shareImg"></img>
+						<img class="toshare" src="share.png" class="shareImg"></img>
 						<p>공유하기</p>
+						<p>사진을 클릭하면 결과 링크를 공유할 수 있습니다</p>
 					</div>
 				</div>
 				<div class="body_right2">
