--- a/src/clubResult/computerClub.html
+++ b/src/clubResult/computerClub.html
@@ -6,47 +6,23 @@
 	<link href="clubResultPage.css" rel="stylesheet">
 	<link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-<script>
-		function copyLink() {
-			var textarea = document.createElement("textarea");
-			document.body.appendChild(textarea);
-			textarea.value = window.location.href;
 
-			textarea.select();
-			document.execCommand('copy');
-			document.body.removeChild(textarea);
+		<script type="text/javascript">
 
-			alert("현재 페이지 주소가 복사되었습니다.");
-		}
-
-		document.addEventListener('DOMContentLoaded', function() {
-			var shareBtn = document.getElementById('shareBtn');
-			shareBtn.onclick = copyLink;
-		});
-</script>
-	<!-- <script src="./shareLink.js"></script> -->
-	<!-- <script>
-		function copyLink() {
-			// 임시 textarea 엘리먼트를 생성하고 링크를 설정합니다.
-			var textarea = document.createElement("textarea");
-			document.body.appendChild(textarea);
-			textarea.value = window.document.location.href;
-			
-
-			// body에 textarea를 추가하고 선택합니다.
-			textarea.select();
-
-			// 링크를 클립보드에 복사합니다.
-			document.execCommand('copy');
-
-			// textarea를 제거합니다.
-			document.body.removeChild(textarea);
-
-			// 복사 완료 메시지를 표시합니다.
-			alert("링크가 복사되었습니다.");
-		}
-	</script> -->
-
+			function clip() {
+	
+				var url = '';
+				var textarea = document.createElement("textarea");
+				document.body.appendChild(textarea);
+				url = window.document.location.href;
+				textarea.value = url;
+				textarea.select();
+				document.execCommand("copy");
+				document.body.removeChild(textarea);
+				alert("공유 링크가 복사되었습니다.")
+			}
+	
+		</script>
 </head>
 
 <body>
@@ -63,18 +39,11 @@
 			<div class="resultName">IT 동아리</div>
 			<div class="body_body">
 				<div class="body_left">
-					<img src="computerImg.png" class="photo"></img>
+					<img href="#" onclick="clip(); return false;" src="computerImg.png" class="photo"></img>
 					<div class="body_footer">
-						<img src="share.png" class="shareImg"></img>
-						<div id="shareBtn">공유하기</div>
-						<!-- <div id="share" onclick="copyLink();">
-							<p>공유하기</p>
-						</div> -->
-						
-
-						<!-- <a href="#" id="share" class="share" title="새창" onclick="copyLink(); return false;">공유하기</a> -->
-
-						<!-- <input type="button" id="share" onclick="copyLink() ">공유하기</input> -->
+						<img class="toshare" src="share.png" class="shareImg"></img>
+						<p>공유하기</p>
+						<p>사진을 클릭하면 결과 링크를 공유할 수 있습니다</p>
 					</div>
 				</div>
 				<div class="body_right">
