--- a/src/header/header.html
+++ b/src/header/header.html
@@ -12,7 +12,10 @@
         font-family: "Shrikhand";
         src: url("../font/Shrikhand.ttf");
       }
-
+      @font-face {
+        font-family: "OpenSans";
+        src: url("../font/OpenSans.ttf");
+      }
       .header {
         width: 1000px;
         height: 13%;
@@ -76,6 +79,7 @@
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
         border-radius: 10px;
+        font-family: "OpenSans";
       }
 
       .dropdown-content a {
