--- a/src/login/login.html
+++ b/src/login/login.html
@@ -70,7 +70,7 @@
           href="/src/signUp/signUp.html"
           style="text-decoration: none; color: black"
         >
-          <p style="font-size: 20px">회원가입</p>
+          <p id="signup" style="font-size: 20px">회원가입</p>
         </a>
       </div>
       <footer data-include="../smallFooter/smallFooter.html"></footer>
