--- a/src/clubResult/exerciseClub.html
+++ b/src/clubResult/exerciseClub.html
@@ -6,26 +6,22 @@
 	<link href="clubResultPage.css" rel="stylesheet">
 	<link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-	<script>
-		sharePage = () => {
-			const shareObject = {
-				title: '결과 공유',
-				text: '',
-				url: window.location.href,
-			};
-			if (navigator.share) {
-				navigator.share(sahreObject)
-					.then(() => {
-						alert('공유 링크가 복사되었습니다')
-					})
-					.catch((error) => {
-						alert('에러가 발생했습니다')
-					})
-			} else {
-				alert('페이지 공유를 지원하지 않습니다')
+		<script type="text/javascript">
+
+			function clip() {
+	
+				var url = '';
+				var textarea = document.createElement("textarea");
+				document.body.appendChild(textarea);
+				url = window.document.location.href;
+				textarea.value = url;
+				textarea.select();
+				document.execCommand("copy");
+				document.body.removeChild(textarea);
+				alert("공유 링크가 복사되었습니다.")
 			}
-		}
-	</script>
+	
+		</script>
 </head>
 
 <body>
@@ -42,10 +38,11 @@
 			<div class="resultName2" onclick="sharePage()">운동 동아리</div>
 			<div class="body_body">
 				<div class="body_left">
-					<img src="exerciseImg.png" class="photo"></img>
+					<img href="#" onclick="clip(); return false;" src="exerciseImg.png" class="photo"></img>
 					<div class="body_footer">
-						<img src="share.png" class="shareImg"></img>
-						<button onclick="sharePage()">공유하기</button>
+						<img class="toshare" src="share.png" class="shareImg"></img>
+						<p>공유하기</p>
+						<p>사진을 클릭하면 결과 링크를 공유할 수 있습니다</p>
 					</div>
 				</div>
 				<div class="body_right">
