--- a/src/result/oldStudent.html
+++ b/src/result/oldStudent.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 	<script type="text/javascript">
-
 		function clip() {
 
 			var url = '';
@@ -21,17 +20,22 @@
 			alert("공유 링크가 복사되었습니다.")
 		}
 
+		function logout () {
+			location.href='../../index.html'
+			alert("로그아웃되었습니다.")
+		}
+
 	</script>
 </head>
 
 <body>
 	<div class="background">
 		<div class="header">
-			<div class="logo">My-U</div>
-			<div class="longLine"></div>
-			<div class="midLine"></div>
-			<div class="shortLine"></div>
-			<div class="mypage">로그아웃</div>
+			<div class="logo" onclick="location.href='../../index.html'">My-U</div>
+            <div class="longLine"></div>
+            <div class="midLine"></div>
+            <div class="shortLine"></div>
+			<div class="mypage" onclick="logout()">로그아웃</div>
 		</div>
 		<div class="body">
 			<div class="body_header"> 대학교에서 당신은...<br></div>
@@ -64,9 +68,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="footer">
-				<div class="goTo"></div>
-			</div>
+		</div>
+		<div class="footer">
+			<div class="goTo"></div>
 		</div>
 </body>
 
