--- a/src/clubResult/exerciseClub.html
+++ b/src/clubResult/exerciseClub.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>MyU_TestResult</title>
-	<link href="clubResultPage.css" rel="stylesheet">
+	<link href="./clubResultPage.css" rel="stylesheet">
 	<link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
