--- a/src/clubResult/volunteerClub.html
+++ b/src/clubResult/volunteerClub.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>MyU_TestResult</title>
-	<link href="clubResultPage.css" rel="stylesheet">
+	<link href="./clubResultPage.css" rel="stylesheet">
 	<link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
@@ -30,7 +30,6 @@
 
 	</script>
 </head>
->>>>>>> 12edcfa93e379f636d074db7dfc8dfc880363bea
 
 <body>
 	<div class="background">
