feat: 깃허브 링크 연결 & design: 깃허브 이미지 레이아웃 수정

--- a/src/campusLifeTest/test2.html
+++ b/src/campusLifeTest/test2.html
@@ -29,12 +29,13 @@
             </div>
             <div class="body_footer">
                 <div class="question">
-                    적적한 공간 시간에 당신은 주로 어디에?                </div>
+                    적적한 공간 시간에 당신은 주로 어디에?                
+                </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="goTo"></div>
-        </div>
+		<div class="footer">
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
+		</div>
     </div>
 </body>
 </html>
