--- a/src/campusLifeTest/test4.html
+++ b/src/campusLifeTest/test4.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="body_right">
                     <button class="answer" onclick="calc(true,5)">도서관은 시험 기간에만 24시간이었지...?<br/>
-                        스터디 카페에 갈래래</button>
+                        스터디 카페에 갈래</button>
                     <button class="answer" onclick="calc(false,5)">도서관은 늘 24시간 개방이잖아?<br/>
                         역시 대학생은 도서관이지!</button>
                 </div>
@@ -36,9 +36,9 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="goTo"></div>
-        </div>
+		<div class="footer">
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
+		</div>
     </div>
 </body>
 </html>
