--- a/src/campusLifeTest/test6.html
+++ b/src/campusLifeTest/test6.html
@@ -33,9 +33,9 @@
                     이제 슬슬 취업 준비를 해야 하는데 어디서 정보를 얻지?                </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="goTo"></div>
-        </div>
+		<div class="footer">
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
+		</div>
     </div>
 </body>
 </html>
