--- a/src/clubTest/test1.html
+++ b/src/clubTest/test1.html
@@ -4,20 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-
-    <!-- <script
-    src="../login/login.html" defer
-    >
-        function nextPage(){
-            document.getElementById("contentFrame").setAttribute("src", "text2.html")
-        }
-        function logout(){
-            document.getElementById("contentFrame").setAttribute("../login", "login.html")
-        }
-    </script> -->
     <script src="./score.js"></script>
-
-
 </head>
 <body>
     <div class="background">
@@ -52,9 +39,9 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="goTo"></div>
-        </div>
+		<div class="footer">
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
+		</div>
     </div>
 </body>
 </html>
