--- a/src/result/fossil.html
+++ b/src/result/fossil.html
@@ -63,9 +63,8 @@
 				</div>
 			</div>
 		</div>
-		
 		<div class="footer">
-			<div class="goTo"></div>
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
 		</div>
 </body>
 
