--- a/src/result/oldStudent.html
+++ b/src/result/oldStudent.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>MyU_TestResult</title>
-	<link href="resultPage.css" rel="stylesheet">
+	<link href="./resultPage.css" rel="stylesheet">
 	<link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 	<script type="text/javascript">
@@ -70,7 +70,7 @@
 			</div>
 		</div>
 		<div class="footer">
-			<div class="goTo"></div>
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
 		</div>
 </body>
 
