--- a/src/campusLifeTest/test1.html
+++ b/src/campusLifeTest/test1.html
@@ -4,20 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-
-    <!-- <script src="../login/login.html" defer
-    
-    >
-        function nextPage(){
-            document.getElementById("contentFrame").setAttribute("src", "text2.html")
-        }
-        function logout(){
-            document.getElementById("contentFrame").setAttribute("../login", "login.html")
-        }
-    </script> -->
     <script src="./score.js"></script>
-
-
 </head>
 <body>
     <div class="background">
@@ -36,8 +23,6 @@
                     <img src="/image/campusLifeTest/test1.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <!-- <button class="answer" onclick="location.href='test2.html'">마루</button>
-                    <button class="answer" onclick="location.href='test2.html'">메로</button> -->
                     <button class="answer" onclick="calc(true,2)">마루</button>
                     <button class="answer" onclick="calc(false,2)">메로</button>
                 </div>
@@ -48,9 +33,9 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="goTo"></div>
-        </div>
+		<div class="footer">
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
+		</div>
     </div>
 </body>
 </html>
