--- a/src/campusLifeTest/test3.html
+++ b/src/campusLifeTest/test3.html
@@ -33,9 +33,9 @@
                     당신의 발걸음은 어디로?                </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="goTo"></div>
-        </div>
+		<div class="footer">
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
+		</div>
     </div>
 </body>
 </html>
