--- a/src/campusLifeTest/test5.html
+++ b/src/campusLifeTest/test5.html
@@ -33,9 +33,9 @@
                     이제 이걸로 세계화 장학금도 받을 수 있을까?                </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="goTo"></div>
-        </div>
+		<div class="footer">
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
+		</div>
     </div>
 </body>
 </html>
