--- a/src/campusLifeTest/test7.html
+++ b/src/campusLifeTest/test7.html
@@ -33,9 +33,9 @@
                     오늘 휴강이라고?  흠... 공간 동안 뭐 하지?                </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="goTo"></div>
-        </div>
+		<div class="footer">
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
+		</div>
     </div>
 </body>
 </html>
