--- a/src/campusLifeTest/test8.html
+++ b/src/campusLifeTest/test8.html
@@ -38,9 +38,9 @@
                     다음 수업을 듣기 위해 내가 학교 건물을 이동하는 방법은?                </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="goTo"></div>
-        </div>
+		<div class="footer">
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
+		</div>
     </div>
 </body>
 </html>
