--- a/src/campusLifeTest/test9.html
+++ b/src/campusLifeTest/test9.html
@@ -32,9 +32,9 @@
                     학교 축제, 동아리 부스 등의 내가 좋아하는 학교 행사는?                </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="goTo"></div>
-        </div>
+		<div class="footer">
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
+		</div>
     </div>
 </body>
 </html>
