--- a/src/clubResult/computerClub.html
+++ b/src/clubResult/computerClub.html
@@ -73,7 +73,7 @@
 			</div>
 		</div>
 		<div class="footer">
-			<div class="goTo"></div>
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
 		</div>
 </body>
 </html>
