--- a/src/clubResult/danceClub.html
+++ b/src/clubResult/danceClub.html
@@ -67,7 +67,7 @@
 			</div>
 		</div>
 		<div class="footer">
-			<div class="goTo"></div>
+			<a href="https://github.com/yuraup/my-u-frontend" id="goTo"><img src="../../image/ic-github.png"></a>
 		</div>
 </body>
 
