feat: header logo 변경

--- a/src/header/header.html
+++ b/src/header/header.html
@@ -17,13 +17,14 @@
         src: url("../font/OpenSans.ttf");
       }
       .header {
-        width: 1000px;
+        width: 1200px;
         height: 13%;
         margin: 6% auto;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
+        margin-bottom: 10%;
       }
       .logo {
         font-family: "Shrikhand";
@@ -32,7 +33,7 @@
         font-size: 80px;
         line-height: 117px;
         color: #191b41;
-        margin-left: 20px;
+        margin-left: 10px;
       }
 
       .link {
@@ -41,7 +42,6 @@
       }
       .longLine {
         width: 100px;
-        margin-left: 15%;
         border: 4px solid #94addf;
       }
       .midLine {
@@ -107,7 +107,8 @@
     <div class="headerContainer">
       <div class="header">
         <a href="../../index.html" class="link">
-          <div class="logo">My-U</div>
+          <!-- <div class="logo">My-U</div> -->
+          <img src="../../image/main/logo.png" class="logo" />
         </a>
         <div class="longLine"></div>
         <div class="midLine"></div>
